# code-indexer-loop

./: .gitignore  README.md  persistence-test.py  pyproject.toml  test.py
code_indexer_loop/: api.py  code_splitter.py  test_api.py
examples/: basic_persistant_usage.ipynb  basic_usage.ipynb
src/: api.py  utils.py
