# modified by rapidmod.io to prepare to upgarde to python 3.12 on 4/4/2024
[build-system]
build-backend = "flit_core.buildapi"
requires = ["flit_core"]

[project]
name = "src"
description = "Code Indexer Loop"
authors = [
    {name = "Rick Lamers", email = "rick@definitive.io"},
    {name = "James K", email = "james@rapidmod.io"}
]
dynamic = ["version"]
readme = "README.md"
requires-python = ">=3.9"

dependencies = [
    "llama-index",
    "chromadb",
    "tree-sitter-languages",
    "tree-sitter",
    "tiktoken",
    "langchain",
    "watchdog",
    "nltk",
]

[project.optional-dependencies]
dev = [
    "toml",
    "black",
    "isort",
    "autoflake",
    "ruff",
    "pytest",
    "flit",
]
test = [
    "pytest-cov",
]

[tool.black]
line-length = 120

[tool.ruff]
# Enable the pycodestyle (`E`) and Pyflakes (`F`) rules by default.
# Unlike Flake8, Ruff doesn't enable pycodestyle warnings (`W`) or
# McCabe complexity (`C901`) by default.
select = ["E", "F"]
ignore = []

# Allow autofix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]
per-file-ignores = {}

# Same as Black.
line-length = 120

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

# Assume Python 3.9
target-version = "py39"